[gd_scene load_steps=55 format=3 uid="uid://cq05d6ewu5mre"]

[ext_resource type="PackedScene" uid="uid://t4l1br5nnw6u" path="res://src/actors/Player.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://dn0ix4b441bgr" path="res://src/scenes/PauseMenu.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://cdaengsb8lyil" path="res://src/actors/Ground.tscn" id="7"]
[ext_resource type="Script" path="res://src/scenes/BackgroundKillZone.gd" id="8"]
[ext_resource type="PackedScene" path="res://src/actors/Background.tscn" id="9"]
[ext_resource type="Texture2D" uid="uid://r0fe2x1a4ljm" path="res://assets/playerTextures/spiderDash/spiderDash_007.png" id="10"]
[ext_resource type="Texture2D" uid="uid://20bwx3cojm3y" path="res://assets/playerTextures/spiderDash/spiderDash_006.png" id="11"]
[ext_resource type="Script" path="res://src/scenes/LevelScene.gd" id="14"]
[ext_resource type="Texture2D" uid="uid://c3r2bain14ds2" path="res://assets/playerTextures/spiderDash/spiderDash_001.png" id="15"]
[ext_resource type="Texture2D" uid="uid://cxvkchj87w23m" path="res://assets/playerTextures/spiderDash/spiderDash_004.png" id="16"]
[ext_resource type="Texture2D" uid="uid://cevvnnpy01xox" path="res://assets/playerTextures/spiderDash/spiderDash_005.png" id="17"]
[ext_resource type="Texture2D" uid="uid://yuo0nx6dalq6" path="res://assets/playerTextures/spiderDash/spiderDash_002.png" id="18"]
[ext_resource type="Texture2D" uid="uid://cxo7yccpv2qiq" path="res://assets/playerTextures/spiderDash/spiderDash_008.png" id="19"]
[ext_resource type="Texture2D" uid="uid://chhejqjmb3f2x" path="res://assets/playerTextures/spiderDash/spiderDash_003.png" id="20"]
[ext_resource type="Script" path="res://src/actors/SpiderDash.gd" id="21"]
[ext_resource type="Script" path="res://src/scenes/PlayerCamera.gd" id="24_fqphc"]
[ext_resource type="Texture2D" uid="uid://bg0qdld4usyiv" path="res://assets/playerTextures/deathEffect/playerExplosion_13_001.png" id="25_1gqjc"]
[ext_resource type="Script" path="res://src/scenes/GroundManager.gd" id="25_gkh4k"]
[ext_resource type="Texture2D" uid="uid://def5tjsg1751w" path="res://assets/playerTextures/dashBoom/playerDash2_boom2_008.png" id="26"]
[ext_resource type="Texture2D" uid="uid://ydy8yaewhg8q" path="res://assets/playerTextures/deathEffect/playerExplosion_13_002.png" id="26_n8oxx"]
[ext_resource type="Texture2D" uid="uid://5pedp7aw0x6d" path="res://assets/playerTextures/dashBoom/playerDash2_boom2_006.png" id="27"]
[ext_resource type="Texture2D" uid="uid://c1mddaifkvi26" path="res://assets/playerTextures/deathEffect/playerExplosion_13_003.png" id="27_morqa"]
[ext_resource type="Texture2D" uid="uid://u5kvay5lb074" path="res://assets/playerTextures/dashBoom/playerDash2_boom2_003.png" id="28"]
[ext_resource type="Texture2D" uid="uid://28rj234ip2qy" path="res://assets/playerTextures/deathEffect/playerExplosion_13_004.png" id="28_5owy3"]
[ext_resource type="Texture2D" uid="uid://d3afgs07qb6si" path="res://assets/playerTextures/dashBoom/playerDash2_boom2_001.png" id="29"]
[ext_resource type="Texture2D" uid="uid://r3kq2yr8qdpa" path="res://assets/playerTextures/deathEffect/playerExplosion_13_005.png" id="29_6oxc8"]
[ext_resource type="Texture2D" uid="uid://d3cqa31wwc4do" path="res://assets/playerTextures/dashBoom/playerDash2_boom2_004.png" id="30"]
[ext_resource type="Texture2D" uid="uid://cijt4beep87h8" path="res://assets/playerTextures/deathEffect/playerExplosion_13_006.png" id="30_64u0q"]
[ext_resource type="Texture2D" uid="uid://beb2s3sjt3uc8" path="res://assets/playerTextures/dashBoom/playerDash2_boom2_005.png" id="31"]
[ext_resource type="Texture2D" uid="uid://5opssh2efccj" path="res://assets/playerTextures/deathEffect/playerExplosion_13_007.png" id="31_3vq3h"]
[ext_resource type="Script" path="res://src/actors/DashBoom.gd" id="32"]
[ext_resource type="Texture2D" uid="uid://h7bhibrps14j" path="res://assets/playerTextures/deathEffect/playerExplosion_13_008.png" id="32_lwevh"]
[ext_resource type="Texture2D" uid="uid://q2eyqj4eqkid" path="res://assets/playerTextures/dashBoom/playerDash2_boom2_009.png" id="33"]
[ext_resource type="Texture2D" uid="uid://ie78neybeq2m" path="res://assets/playerTextures/deathEffect/playerExplosion_13_009.png" id="33_jmvvh"]
[ext_resource type="Texture2D" uid="uid://bpi5fo5chjh8l" path="res://assets/playerTextures/dashBoom/playerDash2_boom2_007.png" id="34"]
[ext_resource type="Texture2D" uid="uid://lnittgb7rowe" path="res://assets/playerTextures/deathEffect/playerExplosion_13_010.png" id="34_63ljg"]
[ext_resource type="Texture2D" uid="uid://bd1xy2jspdlk2" path="res://assets/playerTextures/dashBoom/playerDash2_boom2_002.png" id="35"]
[ext_resource type="Texture2D" uid="uid://c7i603o2byhbh" path="res://assets/playerTextures/deathEffect/playerExplosion_13_011.png" id="35_lh74l"]
[ext_resource type="Texture2D" uid="uid://ds15eshi17onk" path="res://assets/playerTextures/deathEffect/playerExplosion_13_012.png" id="36_f5ms7"]
[ext_resource type="Script" path="res://src/actors/DeathEffect.gd" id="37_50b76"]
[ext_resource type="Texture2D" uid="uid://bek1af8w6bfm3" path="res://assets/levelTextures/ground/floorLine_001.png" id="49"]
[ext_resource type="Script" path="res://src/scenes/Line.gd" id="50"]
[ext_resource type="Script" path="res://src/actors/Trail.gd" id="51"]
[ext_resource type="PackedScene" uid="uid://xq5ud75oryb3" path="res://src/guiElements/InLevelGUI.tscn" id="52"]

[sub_resource type="CanvasItemMaterial" id="5"]
blend_mode = 1

[sub_resource type="SpriteFrames" id="3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("15")
}, {
"duration": 1.0,
"texture": ExtResource("18")
}, {
"duration": 1.0,
"texture": ExtResource("20")
}, {
"duration": 1.0,
"texture": ExtResource("16")
}, {
"duration": 1.0,
"texture": ExtResource("17")
}, {
"duration": 1.0,
"texture": ExtResource("11")
}, {
"duration": 1.0,
"texture": ExtResource("10")
}, {
"duration": 1.0,
"texture": ExtResource("19")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"default",
"speed": 30.0
}]

[sub_resource type="CanvasItemMaterial" id="6"]
blend_mode = 1

[sub_resource type="SpriteFrames" id="4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("29")
}, {
"duration": 1.0,
"texture": ExtResource("35")
}, {
"duration": 1.0,
"texture": ExtResource("28")
}, {
"duration": 1.0,
"texture": ExtResource("30")
}, {
"duration": 1.0,
"texture": ExtResource("31")
}, {
"duration": 1.0,
"texture": ExtResource("27")
}, {
"duration": 1.0,
"texture": ExtResource("34")
}, {
"duration": 1.0,
"texture": ExtResource("26")
}, {
"duration": 1.0,
"texture": ExtResource("33")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"default",
"speed": 30.0
}]

[sub_resource type="Gradient" id="11"]
offsets = PackedFloat32Array(0, 0.152091)
colors = PackedColorArray(0, 1, 1, 0, 0, 1, 1, 1)

[sub_resource type="Gradient" id="13"]
offsets = PackedFloat32Array(0, 0.152091)
colors = PackedColorArray(0, 1, 1, 0, 0, 1, 0, 1)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_qarbj"]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_am3qv"]
blend_mode = 1

[sub_resource type="SpriteFrames" id="SpriteFrames_400i3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("25_1gqjc")
}, {
"duration": 1.0,
"texture": ExtResource("26_n8oxx")
}, {
"duration": 1.0,
"texture": ExtResource("27_morqa")
}, {
"duration": 1.0,
"texture": ExtResource("28_5owy3")
}, {
"duration": 1.0,
"texture": ExtResource("29_6oxc8")
}, {
"duration": 1.0,
"texture": ExtResource("30_64u0q")
}, {
"duration": 1.0,
"texture": ExtResource("31_3vq3h")
}, {
"duration": 1.0,
"texture": ExtResource("32_lwevh")
}, {
"duration": 1.0,
"texture": ExtResource("33_jmvvh")
}, {
"duration": 1.0,
"texture": ExtResource("34_63ljg")
}, {
"duration": 1.0,
"texture": ExtResource("35_lh74l")
}, {
"duration": 1.0,
"texture": ExtResource("36_f5ms7")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"default",
"speed": 30.0
}]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(6144, 22)

[node name="Scene" type="Node2D"]
script = ExtResource("14")
levels = ["Level1", "Playground", "Trigger Test", "SlopeDemo", "ArrowTriggerTest", "Explorers", "TestLevel", "SpiderTests"]

[node name="Background2" type="CanvasLayer" parent="."]
layer = -50
follow_viewport_enabled = true
follow_viewport_scale = 0.333

[node name="Background" parent="Background2" instance=ExtResource("9")]
position = Vector2(1, 642.153)
scale = Vector2(3, 3)

[node name="Levels" type="Node2D" parent="."]
position = Vector2(0, 488)

[node name="SpiderDash" type="Node2D" parent="."]
scale = Vector2(0.5, 0.5)
script = ExtResource("21")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="SpiderDash"]
modulate = Color(0, 1, 1, 1)
material = SubResource("5")
position = Vector2(-32, 0)
rotation = -1.5708
sprite_frames = SubResource("3")
autoplay = "default"
frame = 8
centered = false
flip_v = true

[node name="DashBoom" type="AnimatedSprite2D" parent="."]
modulate = Color(0, 1, 1, 1)
material = SubResource("6")
position = Vector2(0, -66)
sprite_frames = SubResource("4")
frame = 9
frame_progress = 1.0
script = ExtResource("32")

[node name="Trail" type="Line2D" parent="."]
process_priority = 5
position = Vector2(0, 455)
points = PackedVector2Array(0, 1)
width = 20.0
default_color = Color(0, 1, 1, 1)
gradient = SubResource("11")
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
round_precision = 16
script = ExtResource("51")
length = 150.0
wave_trail = true

[node name="DebugTrail" type="Line2D" parent="."]
process_priority = 5
position = Vector2(0, 455)
points = PackedVector2Array(0, 1)
width = 2.0
default_color = Color(0, 1, 0, 1)
gradient = SubResource("13")
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
round_precision = 16
antialiased = true
script = ExtResource("51")
length = 150.0

[node name="PlayerCamera" type="Camera2D" parent="."]
unique_name_in_owner = true
z_index = 51
position = Vector2(0, 225)
scale = Vector2(5, 5)
offset = Vector2(300, 0)
ignore_rotation = false
zoom = Vector2(1.5, 1.5)
drag_left_margin = 0.4
drag_top_margin = 0.4
drag_right_margin = 0.4
drag_bottom_margin = 0.4
editor_draw_limits = true
script = ExtResource("24_fqphc")

[node name="Player" parent="." instance=ExtResource("1")]
position = Vector2(0, 488)
scale = Vector2(0.5, 0.5)

[node name="GroundManager" type="CanvasLayer" parent="."]
unique_name_in_owner = true
follow_viewport_enabled = true
script = ExtResource("25_gkh4k")

[node name="Ground_Bottom" type="Node2D" parent="GroundManager"]
position = Vector2(3.05176e-05, 488)
scale = Vector2(1.5, 1.5)
metadata/_edit_group_ = true

[node name="Ground_Bottom_OBJ" parent="GroundManager/Ground_Bottom" instance=ExtResource("7")]

[node name="Line_Bottom" type="Sprite2D" parent="GroundManager/Ground_Bottom"]
z_index = 1
material = SubResource("CanvasItemMaterial_qarbj")
position = Vector2(-2.03451e-05, 1)
scale = Vector2(0.333333, 0.333333)
texture = ExtResource("49")
script = ExtResource("50")

[node name="Ground_Top" type="Node2D" parent="GroundManager"]
position = Vector2(1404, -5500)
rotation = -3.14159
scale = Vector2(1.5, 1.5)
metadata/_edit_group_ = true

[node name="Ground_Top_OBJ" parent="GroundManager/Ground_Top" instance=ExtResource("7")]

[node name="Line_Top" type="Sprite2D" parent="GroundManager/Ground_Top" groups=["LINE"]]
z_index = 1
material = SubResource("CanvasItemMaterial_qarbj")
position = Vector2(0, 1.00146)
scale = Vector2(0.333333, 0.333333)
texture = ExtResource("49")
script = ExtResource("50")

[node name="DeathEffect" type="AnimatedSprite2D" parent="."]
z_index = 51
material = SubResource("CanvasItemMaterial_am3qv")
position = Vector2(0, -66)
sprite_frames = SubResource("SpriteFrames_400i3")
frame = 12
frame_progress = 1.0
script = ExtResource("37_50b76")

[node name="LevelMusic" type="AudioStreamPlayer" parent="."]
autoplay = true

[node name="BackgroundKillZone" type="Area2D" parent="."]
position = Vector2(1024, -5000)
collision_layer = 2
script = ExtResource("8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BackgroundKillZone"]
shape = SubResource("1")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(-674, 0)

[node name="PauseLayer" type="CanvasLayer" parent="."]
layer = 75

[node name="PauseMenu" parent="PauseLayer" instance=ExtResource("6")]
visible = false
custom_minimum_size = Vector2(1920, 1080)

[node name="GUI" parent="." instance=ExtResource("52")]

[connection signal="dead" from="Player" to="DeathEffect" method="_on_player_dead"]
[connection signal="spider_jumped" from="Player" to="SpiderDash" method="_on_Player_spider_jumped"]
[connection signal="started_dashing" from="Player" to="DashBoom" method="_on_Player_started_dashing"]
[connection signal="area_entered" from="BackgroundKillZone" to="BackgroundKillZone" method="_on_RegularSpike01_0_area_entered"]
